--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,34 @@
 package/*.tar.bz2
+
+.yardoc
+Makefile
+/Makefile.am
+Makefile.am.common
+Makefile.in
+aclocal.m4
+autodocs-cc-base.ami
+autodocs-cc-off.ami
+autodocs-cc.ami
+autodocs-ycp.ami
+autom4te.cache
+config.guess
+config.log
+config.status
+config.sub
+configure
+configure.ac
+doc
+install-sh
+iplb.pot
+missing
+pluglib-bindings.ami
+testsuite/config/default.exp
+testsuite/config/unix.exp
+testsuite/config/unknown.exp
+testsuite/raw*
+testsuite/run/runtest.sh
+testsuite/site.exp
+testsuite/*.log
+testsuite/tmp.*
+testsuite/*.sum
+testsuite/yast2-iplb.test/testsuite.exp
