Fix travis errors, add ingore files and remove unused variable.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
 package/*.tar.bz2
+.yardoc
+Makefile
+Makefile.am
+Makefile.am.common
+Makefile.in
+aclocal.m4
+autodocs-cc-base.ami
+autodocs-cc-off.ami
+autodocs-cc.ami
+autodocs-ycp.ami
+autom4te.cache
+config.guess
+config.log
+config.status
+config.sub
+configure
+configure.ac
+doc
+install-sh
+iplb.pot
+missing
+pluglib-bindings.ami
+src/Makefile
+src/Makefile.in
+testsuite
